@@ -76,6 +76,12 @@ None.
 	SOURCE	DEST	POLICY
 	net	all	DROP:Drop(-,DROP) #DROP rather than REJECT Auth
 
+    The parameters can also be specified in shorewall.conf:
+
+    Example:
+
+	DROP_DEFAULT=Drop(-,DROP)
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
